Content/site.css
/*h1, h2, h3, h4, h5, h6 {
        font-family: jubilat;
}
p, div {
        font-family: freight-sans-pro;
        font-style: normal;
        font-weight: 300;
        color: #364350;
}*/

/*#147FD7*/
body {
    font-size: 16px;
    line-height: 1.4;
    font-family: 'Source Sans Pro', sans-serif;
    font-weight: 300;
}
img {
    max-width: 100%;
    display: block;
}
.bernie-calc {
    padding-top: 100px;
}
a,
a:hover,
a:visited,
a:focus {
    color: #0076d7;
}
iframe {
    border: none;
}
h4 {
    text-transform: uppercase;
    font-weight: 300;
    font-size: 18px;
}
.container-fluid {
    padding: 0;
}
.navbar-inverse{
    background-color: #fff;/*#147FD7;*/
    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
    border: none;
    height: 100px;
}
.navbar-inverse .navbar-brand {
    color: #fff;
    float: left;
}
.bernie-calc .navbar-inverse h1 {
    color: #fff;
    text-transform: uppercase;
    font-weight: 300;
    letter-spacing: 1.2px;
}
.savings-spaceholder {
    position: relative;
}
.savings-spaceholder, .savings-container{
    z-index:9999;
    transition: all .3s linear;
}
.savings .savings-text,
.savings .savings-amount {
/*    margin-left: -15px;
    margin-right: -15px;*/
    text-align: center;
}
.savings .savings-text {
    background-color: rgb(42, 179, 71);
}
.savings .savings-text.bg-danger {
    background-color: rgb(130, 0, 0);
}
.savings .savings-amount{
    font-size: 150%;
    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.06);
}
.savings>div:last-child {
    margin-bottom: 20px;
}
.savings-nobottommargin>div:last-child{
  margin-bottom: 0px !important;
}
.savings > div > div {
    text-transform: uppercase;
    padding: 5px 0;
}
.copyLink {
    width:100%;
}
.disclaimer {
    background-color: #fff;
    /*box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.06);*/
    padding: 15px;
}
.disclaimer a {
    text-decoration: underline;
}
.savings > div:last-child {
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
}
.savings {

}
.floating {
    position: fixed;
    top: 100px;
    /*margin: 0 -15px;*/
}
@media (max-width: 990px){
    .floating {
        margin: 0;
    }
}
@media (max-width: 480px) {
    .bernie-calc {
        padding-top: 65px;
    }
    .savings {
        float: left !important;
    }
    /*[class^="col-"] {
        float: none;
    }*/
    .bernie-calc .navbar-inverse {
        height: 65px;
    }
    .bernie-calc .navbar-brand img {
        width: 65px;

    }
    .bernie-calc .navbar-brand {
        float: none;
    }
    .bernie-quote {
        text-align: center;
    }
    .savings>div>div {
        font-size: 14px;
        /*margin: 0 2px;*/
    }
    .navbar-inverse .navbar-brand {
        float: none;
        margin: 0 auto;
    }
    .floating {
        top: 0px;
    }
    footer {
        text-align: center;
    }
}

.bernie-calc .jumbotron {
    background-color: #185378;
    color: #fff;
    border-radius: 0;
    margin-bottom: 0;
    margin-top: 0;
}
.bernie-calc .jumbotron img {
    margin: 0 auto;
    width: 80%; 
}
.bernie-calc .cta {
    color: rgba(255,255,255,.6);
}
.bern-calc .cta a {
    color #fff;
}
.bernie-calc .jumbotron.cta {
    margin-bottom: 25px;
}
.bernie-calc .jumbotron.cta a {
    color: #fff;
}
.bernie-calc .jumbotron .lead {
    padding: 15px 0;
}
.quote {
    position: relative;
    color: rgba(255,255,255,.6);
    background-color: #147FD7;
    padding: 70px 0;
}
.quote a {
    color: #fff;
}
.quote .lead {
    padding-left: 50px;
}
.bernie-quote {
    font-weight: 100;
    font-size: 18px;
    color: #fff;
    text-transform: uppercase;
}
.lg-quote {
    font-size: 150px;
    line-height: 15px;
    position: absolute;
    left: 0;
    top: 50px;
}

.bern-calc-body {
    margin-top: 25px;
}
.bernie-calc .title {
    font-size: 48px;
    font-weight: 300;
}
.slider-selection {
	background: #149bdf;
}

.advanced-toggle {
	text-align: left;
	cursor: pointer;
}
.outline {
    border-radius: 100%;
    padding: 8px;
    width: 35px;
    height: 35px;

    position: relative;
    line-height: 1;
    text-align: center;
    background-color: #147FD7;
    color: #fff;

}

.has_error>label{
	color:#a94442;
}
div.rounded {
    color: #fff;
    border-radius: 3px;
	background-color: #147FD7;
	padding: 9px 15px;
    text-transform: uppercase;
}
.bernie-calc .panel {
    background-color: transparent;
    border: none;
    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.06);
}
.bernie-calc .panel-body {
    border: none;
    background: transparent;
    padding: 15px;
}
.bernie-calc .panel-heading {
    font-size: 22px;
    font-weight: 200;
    text-transform: uppercase;
    color: #147FD7;
    border: none;
    border-bottom: 2px solid #147FD7;
    background-color: transparent;
}
.bernie-calc .panel-footer{
	height: 60px;
    background-color: transparent;
}

.bernie-calc .result-panel {
    border: 1px solid #ddd;
    /*rgb(69, 211, 99)*/
    background-color: #898989; 
    color: #fff;
}
.bernie-calc .result-panel-heading {
    font-size: 16px;
    font-weight: 300;
    text-transform: uppercase;
    background-color: #7c7c7c;
    padding: 10px 0;
    margin: 0;
}
.bernie-calc .result-panel-body {
    padding: 5px;
    font-size: 26px;
}
.bernie-calc .result-panel .input-group-addon.currency {
    background-color: #7c7c7c;
    border-color: #7c7c7c;
}

.bernie-calc .bernieNew .result-panel-heading {
    background-color: #147FD7;
}
.bernie-calc .bernieNew .result-panel-body {
    background-color: #1271c0;
}
.bernie-calc .bernieNew .result-panel .input-group-addon.currency {
    background-color: #147FD7;
    border-color: #147FD7;
}
.bernie-calc .bernieNew .result-panel {
    border: 1px solid #ddd;
}
.input-group,.form-group>input {
	width: 100%;
}
@media (min-width: 768px){
	.form-group label,
	.form-group input { float:left; display:inline;   }

	.advanced {
		display:none;
	}
	.form-group { margin-right:5px }

	.form-group label { line-height:29px; }

	.form-group>.input-group,.form-group>input,.form-group>span.help-block {
		margin-left:260px;
		width: -moz-calc(100% - 250px);
		width: -webkit-calc(100% - 250px);
		width: calc(100% - 250px);
	}
}
.input-group-addon {
    border-radius: 0;
}
.input-group-addon.success {
    color: rgb(255, 255, 255);
    background-color: rgb(69, 211, 99);
    border-color: rgb(42, 179, 71);
}
.input-group-addon.info {
    color: #fff;
    background-color: #1271c0;
    border-color: #147FD7;
}
.input-group-addon.currency {
    color: rgb(255, 255, 255);
    background-color: rgb(42, 179, 71);
    border-color: rgb(42, 179, 71);
	cursor: default;
}
.whoLabel{
    width:100px;
}

.shareLinks{
    padding: 25px 5px 5px;
    display: block;
    float: left;
    position: relative;
}
.social {
    padding: 0;
    z-index: 9999;
}
.social li {
    list-style: none;
}
#fa-facebook {
    color: #3a5795;
}
#twitter .count {
    font-size: 13px;
}
.social .box{
    width: 100%;
    display: block;
    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.06);
    margin-bottom: 15px;
}
.social .count {
    color: #fff;
    display: block;
    font-size: 24px;
    padding: 10px 0;
    position: relative;
    text-align: center;
    text-decoration: none;
    background-color: #1271c0;
}
.social .share {
    display:block;
    font-size: 18px;
    padding: 10px 0;
    border: 1px solid #eee;
    text-align:center;
    text-decoration:none;

    background-color:#fff;
}
.social .buttons {
    display:none;
    width:300px;
}
.social .button {
    max-width:50px;
    height:50px;
    margin-left:10px;
}

/*.bernieText{
    color: #185378;
}*/
.bernieReplacing,
.bernieNew {
    text-transform: uppercase;
}
.bernieReplacing{
    color: #898989;
    background-color: transparent;
}
.bernieNew{
    color: #147FD7;
    background-color: transparent;
}
.bernieNew.rounded-bottom{
    margin-bottom: 15px;
}
span.glyphicon.glyphicon-chevron-up,
span.glyphicon.glyphicon-chevron-down {
    padding-left: 7px;
}
.dollarSign{
    position: absolute;
    z-index: 4;
    top: 7px;
    color: rgb(133, 187, 101);
}
.dollarSign:first-child {
    left: 8px;
}
.dollarSign:nth-child(2){
    left: 105px;
}
.bernie-calc select {
    border-radius: 0;
}
.form-control{
    padding: 6px 18px;
    height: 45px;
    border-radius: 0;
}
.sanders-logo {
    width: 175px;
    fill: #fff;
    display: block;
    stroke: #fff;
    stroke-width: 0;
}
.bg-success,.alert-bg-success {
    color: #fff;
    background-color: #45d363;
    /*text-shadow: 0 2px 24px rgba(7, 8, 8, 0.75);*/
}
.text-danger {
    color: #F55B5B;
}
.bg-danger {
    color: #fff;
    background-color: #F55B5B;
    /*text-shadow: 0 2px 24px rgba(7, 8, 8, 0.75);*/
}
.btn {
    color: #fff; 
    background-color: #F55B5B;
    border-radius: 0;
    font-weight: 300;
    text-transform: uppercase;
}
.btn:hover {
    color: #fff;
}
.btn-info,.btn-info:hover {
    background-color: #147FD7;
}
.btn-success,.btn-success:hover {
    background-color: rgb(42, 179, 71);
}

footer {
    padding: 15px 0;
    color: #147FD7;
    background-color: transparent;
}

footer p {
    font-weight: 300;
}

.nopadding {
    padding: 0 !important;
 }

